POST User Event endpoint
